Fixed slideshow causing horizontal scrollbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11525,6 +11525,8 @@ ul.vertical.menu.align-left.submenu.is-dropdown-submenu.first-sub {
 
 #slideshow {
   display: block;
+  width: 100%;
+  overflow: hidden;
 }
 
 #slideshow img {
