--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -413,6 +413,8 @@ ul.vertical.menu.align-left.submenu.is-dropdown-submenu.first-sub {
 
 #slideshow {
 	display: block;
+	width: 100%;
+	overflow: hidden;
 
 	img {
 		height: 210px ;
